# webbgpt

./: .gitignore  README.md  pyproject.toml
data/catalog/: catalog.json
data/domain/: advising_corpus.txt  catalog_corpus.txt  education_corpus.txt  local_mvp_continue_corpus.txt  philosophy_corpus.txt  webb_public_corpus.txt
data/eval/: assistant.jsonl  catalog.responses  catalog_missing.responses  chat_sanity.jsonl  posttrain_regression.jsonl  webb_admissions.responses  webb_athletics_missing.responses  webb_athletics_present.responses  webb_college_guidance.responses  webb_course_diff.responses  webb_course_missing.responses  webb_course_present.responses  webb_faculty.responses  webb_handbook_missing.responses  webb_handbook_present.responses  webb_mission_values.responses  webb_mixed_multi_domain.responses  webb_museum_programs.responses  webb_planner.responses  webb_student_life.responses
data/local/: preference.jsonl  preference_validation.jsonl  sft.jsonl  sft_validation.jsonl
data/webb/: seed_urls.json  (+3 more)
sample-configs/: data-3b.json  data-7b.json  data-debug.json  data-local-mvp.json  eval-3b.json  eval-7b.json  eval-debug.json  eval-local-mvp.json  model-3b.json  model-7b.json  model-debug.json  model-local-mvp.json  serve-3b.json  serve-7b.json  serve-debug.json  serve-local-mvp.json  tokenizer-7b.json  tokenizer-corpus-7b.json  tokenizer-corpus-local-mvp.json  tokenizer-corpus.json  tokenizer-local-mvp.json  tokenizer.json  train-3b.json  train-7b.json  train-debug.json  train-local-mvp.json
src/: cli.py  generation.py  progress.py  provenance.py  repro.py
(+115 files in other folders)
