[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webbgpt"
version = "0.1.0"
description = "WebbGPT: a from-scratch foundation model and grounded assistant stack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Harry Chen" }
]
dependencies = [
  "numpy<2; platform_system == 'Darwin'",
  "torch>=2.3; platform_system != 'Darwin'",
  "torch>=2.2; platform_system == 'Darwin'",
  "sentencepiece>=0.2.0",
  "datasets>=2.20",
  "transformers>=4.43,<5",
  "safetensors>=0.4.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.optional-dependencies]
train = [
  "flash-attn>=2.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "tensorboard>=2.17",
  "wandb>=0.17",
]
data = [
  "pyarrow>=17.0",
  "pandas>=2.2",
  "orjson>=3.10",
  "duckdb>=1.0",
]
serve = [
  "vllm>=0.5.4; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "pgvector>=0.3.4",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
webbgpt = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
